# Cling

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  info.toml  test.sh  test_all_exercises.sh  verify_metadata.sh
.github/workflows/: release.yml
exercises/00_intro/: CMakeLists.txt  README.md  intro1.c  intro2.c
exercises/01_variables/: CMakeLists.txt  README.md  variables1.c  variables2.c  variables3.c  variables4.c  variables5.c  variables6.c  variables7.c  variables8.c
exercises/02_control_flow/: CMakeLists.txt  README.md  if1.c  if2.c  loops1.c  loops2.c  loops3.c  loops4.c  loops5.c  switch1.c
exercises/03_functions/: CMakeLists.txt  README.md  functions1.c  functions2.c  functions3.c  functions4.c  functions5.c  functions6.c  functions7.c  functions8.c
exercises/04_arrays/: CMakeLists.txt  README.md  arrays1.c  arrays2.c  arrays3.c  arrays4.c  strings1.c  strings2.c  strings3.c  strings4.c
exercises/05_pointers/: CMakeLists.txt  README.md  pointers1.c  pointers10.c  pointers11.c  pointers2.c  pointers3.c  pointers4.c  pointers5.c  pointers6.c  pointers7.c  pointers8.c  pointers9.c
exercises/06_structs/: CMakeLists.txt  README.md  memory1.c  memory2.c  memory3.c  memory4.c  structs1.c  structs2.c  structs3.c  structs4.c
exercises/07_file_io/: CMakeLists.txt  README.md  file1.c  file2.c  file3.c  file4.c
exercises/08_final_project/: CMakeLists.txt
exercises/08_final_project/snake/: CMakeLists.txt  README.md  snake.h  snake_logic.c  snake_test.c
scripts/: clear_exercises.py  install-portable.ps1  install-win.ps1  install-windows.ps1  install.ps1  install.sh  rewrite_exercises.py
solutions/: arrays1.c  arrays2.c  arrays3.c  arrays4.c  file1.c  file2.c  file3.c  file4.c  functions1.c  functions2.c  functions3.c  functions4.c  functions5.c  functions6.c  functions7.c  functions8.c  if1.c  if2.c  intro2.c  loops1.c  loops2.c  loops3.c  loops4.c  loops5.c  memory1.c  memory2.c  memory3.c  memory4.c  pointers1.c  pointers10.c  pointers11.c  pointers2.c  pointers3.c  pointers4.c  pointers5.c  pointers6.c  pointers7.c  pointers8.c  pointers9.c  snake_logic.c  (+17 more)
src/: exercise.rs  main.rs  run.rs  state.rs  ui.rs  verify.rs  watch.rs
