cmake_minimum_required(VERSION 3.10)

add_executable(functions1 functions1.c)
target_link_libraries(functions1 unity)

add_executable(functions2 functions2.c)
target_link_libraries(functions2 unity)

add_executable(functions3 functions3.c)
target_link_libraries(functions3 unity)

add_executable(functions4 functions4.c)
target_link_libraries(functions4 unity)

add_executable(functions5 functions5.c)
target_link_libraries(functions5 unity)

add_executable(functions6 functions6.c)
target_link_libraries(functions6 unity)

add_executable(functions7 functions7.c)
target_link_libraries(functions7 unity)

add_executable(functions8 functions8.c)
target_link_libraries(functions8 unity)
