cmake_minimum_required(VERSION 3.10)

add_executable(arrays1 arrays1.c)
target_link_libraries(arrays1 unity)

add_executable(arrays2 arrays2.c)
target_link_libraries(arrays2 unity)

add_executable(arrays3 arrays3.c)
target_link_libraries(arrays3 unity)

add_executable(arrays4 arrays4.c)
target_link_libraries(arrays4 unity)

add_executable(strings1 strings1.c)
target_link_libraries(strings1 unity)

add_executable(strings2 strings2.c)
target_link_libraries(strings2 unity)

add_executable(strings3 strings3.c)
target_link_libraries(strings3 unity)

add_executable(strings4 strings4.c)
target_link_libraries(strings4 unity)
