cmake_minimum_required(VERSION 3.10)

add_executable(pointers1 pointers1.c)
target_link_libraries(pointers1 unity)

add_executable(pointers2 pointers2.c)
target_link_libraries(pointers2 unity)

add_executable(pointers3 pointers3.c)
target_link_libraries(pointers3 unity)

add_executable(pointers4 pointers4.c)
target_link_libraries(pointers4 unity)

add_executable(pointers5 pointers5.c)
target_link_libraries(pointers5 unity)

add_executable(pointers6 pointers6.c)
target_link_libraries(pointers6 unity)

add_executable(pointers7 pointers7.c)
target_link_libraries(pointers7 unity)

add_executable(pointers8 pointers8.c)
target_link_libraries(pointers8 unity)

add_executable(pointers9 pointers9.c)
target_link_libraries(pointers9 unity)

add_executable(pointers10 pointers10.c)
target_link_libraries(pointers10 unity)

add_executable(pointers11 pointers11.c)
target_link_libraries(pointers11 unity)
