cmake_minimum_required(VERSION 3.10)

add_executable(structs1 structs1.c)
target_link_libraries(structs1 unity)

add_executable(structs2 structs2.c)
target_link_libraries(structs2 unity)

add_executable(structs3 structs3.c)
target_link_libraries(structs3 unity)

add_executable(structs4 structs4.c)
target_link_libraries(structs4 unity)

add_executable(memory1 memory1.c)
target_link_libraries(memory1 unity)

add_executable(memory2 memory2.c)
target_link_libraries(memory2 unity)

add_executable(memory3 memory3.c)
target_link_libraries(memory3 unity)

add_executable(memory4 memory4.c)
target_link_libraries(memory4 unity)
